programming-language/workspace/compiler/tests/fixtures/invalid/array_type_mismatch.cb64
# Cobra64 - Array type mismatch test
# Expected error: Type mismatch - assigning word to byte array

def main():
    arr: byte[] = [1000, 2000]
